package fr.fges.policy;

public interface DayPolicy {
    boolean isWeekend();
}